fix contrast error

--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,7 @@ p {
 }
 
 .hit-the-floor {
+  background-color: black;
   text-align: center;
   color: #fff;
   font-size: 8em;
